--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="assets/css/material-dashboard.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
-    <base href="/dev/SAS/SAS-crm/">
-    <!-- <base href="/"> -->
+    <!-- <base href="/dev/SAS/SAS-crm/"> -->
+    <base href="/">
 
 </head>
 
