--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="assets/css/material-dashboard.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
-    <!-- <base href="/dev/SAS/SAS-crm/"> -->
-    <base href="/">
+    <base href="/dev/SAS/sas-client/">
+    <!-- <base href="/"> -->
 
 </head>
 
@@ -58,6 +58,7 @@
 
     <!-- Vendor: Angular, followed by our custom Javascripts -->
     <script src="javascripts/angular-1-4-2.min.js"></script>
+    <script src="node_modules/angular-md5/angular-md5.min.js"></script>
     <script src="javascripts/angular-route-1-2-18.min.js"></script>
     <script src="javascripts/ng-tags-input.min.js"></script>
     <script src="node_modules/ng-dialog/js/ngDialog.min.js"></script>
