--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Material Dashboard CSS -->
     <link rel="stylesheet" href="assets/css/material-dashboard.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
+    <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
 
     <base href="/dev/SAS/sas-client/">
     <!-- <base href="/"> -->
@@ -35,12 +37,6 @@
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
 
 
-    <!-- datatable -->
-    <!-- <script src="assets/js/jquery.dataTables.min.js"></script> -->
-    <!-- <script src="assets/js/bootstrap-table.js"></script> -->
-    <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
-    <script src="javascripts/jquery.dataTables.min.js"></script>
-
     <!--  Notifications Plugin, full documentation here: http://bootstrap-notify.remabledesigns.com/    -->
     <script src="assets/js/plugins/bootstrap-notify.js"></script>
 
@@ -58,9 +54,16 @@
 
     <!-- Vendor: Angular, followed by our custom Javascripts -->
     <script src="javascripts/angular-1-4-2.min.js"></script>
+    <!-- datatable -->
+    <!-- <script src="assets/js/jquery.dataTables.min.js"></script> -->
+    <!-- <script src="assets/js/bootstrap-table.js"></script> -->
+    <script src="javascripts/angular-datatables.min.js"></script>
+    <script src="javascripts/jquery.dataTables.min.js"></script>
+    <script src="javascripts/dataTables.colResize.js"></script>
+
     <script src="node_modules/angular-md5/angular-md5.min.js"></script>
     <script src="javascripts/angular-route-1-2-18.min.js"></script>
-    <script src="javascripts/ng-tags-input.min.js"></script>
+    <!-- <script src="javascripts/ng-tags-input.min.js"></script> -->
     <script src="node_modules/ng-dialog/js/ngDialog.min.js"></script>
     <link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog.min.css">
     <link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog-theme-default.min.css">
