--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
 
-    <base href="/dev/SAS/sas-client/">
-    <!-- <base href="/"> -->
+    <!-- <base href="/dev/SAS/sas-client/"> -->
+    <base href="/">
 
 </head>
 
@@ -74,8 +74,12 @@
     <script src="center/controller.js"></script>
     <script src="center/controller/home.js"></script>
     <script src="center/notifi.js"></script>
-    <script src="center/controller/setup.js"></script>
+    <script src="center/controller/recall.js"></script>
+    <script src="center/controller/schedule.js"></script>
+    <script src="center/controller/unreg.js"></script>
+    <script src="center/controller/calendar.js"></script>
     <script src="center/controller/Statistics.js"></script>
+    <script src="center/controller/setup.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
 
 </body>
