--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+    />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
     <!-- Material Dashboard CSS -->
@@ -18,9 +19,10 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
-
-    <!-- <base href="/dev/SAS/sas-client/"> -->
-    <base href="/">
+    <script src="javascripts/socket.io.js"></script>
+    
+    <base href="/dev/SAS/sas-client/">
+    <!-- <base href="/"> -->
 
 </head>
 
@@ -74,9 +76,11 @@
     <script src="center/controller.js"></script>
     <script src="center/controller/home.js"></script>
     <script src="center/notifi.js"></script>
+    <script src="center/controller/notcall.js"></script>
     <script src="center/controller/recall.js"></script>
     <script src="center/controller/schedule.js"></script>
     <script src="center/controller/unreg.js"></script>
+    <script src="center/controller/send.js"></script>
     <script src="center/controller/calendar.js"></script>
     <script src="center/controller/Statistics.js"></script>
     <script src="center/controller/setup.js"></script>
