--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
     <script src="javascripts/socket.io.js"></script>
-<!--     
-    <base href="/dev/SAS/sas-client/"> -->
-    <base href="/">
+    
+    <base href="/dev/SAS/sas-client/">
+    <!-- <base href="/"> -->
 
 </head>
 
