--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
     <script src="javascripts/socket.io.js"></script>
     
-    <base href="/dev/SAS/sas-client/">
-    <!-- <base href="/"> -->
+    <!-- <base href="/dev/SAS/sas-client/"> -->
+    <base href="/">
 
 </head>
 
 <body ng-app="SAScrm">
 
     <!-- Our Website Content Goes Here -->
-    <div ng-include='"templates/header.html"'></div>
+    <div ng-include src='"templates/header.html"'></div>
     <div ng-include='"templates/leftmenu.html"'></div>
     <div ng-view></div>
 
