--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <script src="center/controller/calendar.js"></script>
     <script src="center/controller/Statistics.js"></script>
     <script src="center/controller/setup.js"></script>
+    <script src="center/controller/manager.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
 
 </body>
