update setup marketing

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
     <script src="center/controller/Statistics.js"></script>
     <script src="center/controller/setup.js"></script>
     <script src="center/controller/manager.js"></script>
+
+    <script src="center/makert/makerting.js"></script>
+    <script src="center/makert/msetup.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
 
 </body>
