update sheet page

--- a/maketing/msetup.html
+++ b/maketing/msetup.html
@@ -35,8 +35,7 @@
                                     <td class="text-center">
                                         <div class="togglebutton">
                                             <label>
-                                                {{content.Leader}}
-                                                <input type="checkbox" ng-model="check" ng-disabled="" ng-checked="content.SheetID[0].isready === true"
+                                                <input type="checkbox" ng-model="check" ng-checked="content.SheetID[0].isready === true"
                                                     ng-click="ChangeSheet(content, check)">
                                                 <span class="toggle"></span>
                                             </label>
