--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-    />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
     <!-- Material Dashboard CSS -->
@@ -20,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/jquery.dataTables.min.css">
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
     <script src="javascripts/socket.io.js"></script>
-    
+
     <base href="/dev/SAS/sas-client/">
     <!-- <base href="/"> -->
 
@@ -44,7 +43,7 @@
 
     <!--  Charts Plugin, full documentation here: https://gionkunz.github.io/chartist-js/ -->
     <!-- <script src="assets/js/plugins/chartist.min.js"></script> -->
-    
+
 
     <!-- Plugin for Scrollbar documentation here: https://github.com/utatti/perfect-scrollbar -->
     <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
@@ -93,6 +92,7 @@
     <script src="center/controller/manager.js"></script>
 
     <script src="center/makert/makerting.js"></script>
+    <script src="center/makert/mlist.js"></script>
     <script src="center/makert/msetup.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
 
