--- a/maketing/default.html
+++ b/maketing/default.html
@@ -52,7 +52,7 @@
                                         <th>Stt</th>
                                         <th>Id</th>
                                         <th>Họ Tên</th>
-                                        <th>Online <br> (Đã cộng hủy trừ trùng)</th>
+                                        <th>Online</th>
                                         <th>Đăng ký học</th>
                                         <th>Phần trăm</th>
                                         <th>Trùng</th>
