--- a/maketing/msetup.html
+++ b/maketing/msetup.html
@@ -41,7 +41,7 @@
                                             </label>
                                         </div>
                                     </td>
-                                    <td class="text-center">{{content.Fullname}}</td>
+                                    <td class="text-center">{{content.SheetID[0].name}}</td>
                                 </tr>
                             </tbody>
                         </table>
