--- a/maketing/mlist.html
+++ b/maketing/mlist.html
@@ -11,23 +11,31 @@
                                     <div class="row">
                                         <div class="col-lg-10">
                                             <div class="row">
-                                                <div class="col-lg-4">
+                                                <div class="col-lg-3">
                                                     <div class="input-group add">
                                                         <label for="mkday">Từ Ngày</label>
                                                         <input type="date" class="form-control" id="mkday">
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4">
+                                                <div class="col-lg-3">
                                                     <div class="input-group add">
                                                         <label for="mkday2">Đến Ngày</label>
                                                         <input type="date" class="form-control" id="mkday2">
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4">
+                                                <div class="col-lg-3">
                                                     <div class="input-group add">
-                                                        <label for="mgroup">Groups</label>
-                                                        <select class="form-control" ng-model="mgroup" ng-disabled="auth.Role[0].id !== 0"
-                                                            ng-options="option.Name for option in AllGroups">
+                                                        <label for="mstatus">Trạng Thái</label>
+                                                        <select class="form-control" ng-model="mstatus"
+                                                            ng-options="option.name for option in _status">
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <div class="input-group add">
+                                                        <label for="mform">Form</label>
+                                                        <select class="form-control" ng-model="mform"
+                                                            ng-options="option.name for option in Markets">
                                                         </select>
                                                     </div>
                                                 </div>
