--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
     <script src="javascripts/socket.io.js"></script>
 
-    <base href="/dev/SAS/sas-client/">
-    <!-- <base href="/"> -->
+    <!-- <base href="/dev/SAS/sas-client/"> -->
+    <base href="/">
 
 </head>
 
