--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <!--   Core JS Files   -->
     <script src="assets/js/core/jquery.min.js"></script>
+    <script src="javascripts/jquery.playSound.js"></script>
     <script src="assets/js/core/popper.min.js"></script>
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
 
