--- a/maketing/msetup.html
+++ b/maketing/msetup.html
@@ -10,8 +10,9 @@
                                 <div class="row top-10">
                                     <div class="col-lg-12">
                                         <div class="row">
-                                            <div class="col-lg-8">
-                                                <button class="btn btn-info" data-toggle="modal" data-target="#addform">
+                                            <div class="col-lg-12">
+                                                <button class="btn btn-info" data-toggle="modal" style="float: right"
+                                                    data-target="#addform">
                                                     <i class="material-icons">border_color</i> Thêm Form Mới
                                                 </button>
                                             </div>
@@ -21,30 +22,63 @@
                             </div>
                         </div>
 
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th class="text-center">STT</th>
-                                    <th class="text-center">Trạng thái</th>
-                                    <th class="text-center">Tên Form</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="content in Markets">
-                                    <td class="text-center">{{$index + 1}}</td>
-                                    <td class="text-center">
-                                        <div class="togglebutton">
-                                            <label>
-                                                <input type="checkbox" ng-model="check" ng-checked="content.SheetID[0].isready === true"
-                                                    ng-click="ChangeSheet(content, check)">
-                                                <span class="toggle"></span>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    <td class="text-center">{{content.SheetID[0].name}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div ng-repeat="content in Markets" ng-show="auth.Role[0].id === 0">
+                            <hr>
+                            <h4>{{content.Fullname}}</h4>
+                            <hr>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">STT</th>
+                                        <th class="text-center">Trạng thái</th>
+                                        <th class="text-center">Tên Form</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="Sheet in content.SheetID">
+                                        <td class="text-center" style="width: 100px">{{$index + 1}}</td>
+                                        <td class="text-center" style="width:600px">
+                                            <div class="togglebutton">
+                                                <label>
+                                                    <input type="checkbox" ng-model="check" ng-checked="Sheet.isready === true"
+                                                        ng-click="ChangeSheet(Sheet, check, content)">
+                                                    <span class="toggle"></span>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <td class="text-center" ng-click="show_form(Sheet, content)" style="cursor:pointer">{{Sheet.name}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div ng-show="auth.Role[0].id !== 0">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">STT</th>
+                                        <th class="text-center">Trạng thái</th>
+                                        <th class="text-center">Tên Form</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="content in Markets[0].SheetID">
+                                        <td class="text-center">{{$index + 1}}</td>
+                                        <td class="text-center">
+                                            <div class="togglebutton">
+                                                <label>
+                                                    <input type="checkbox" ng-model="check" ng-checked="content.isready === true"
+                                                        ng-click="ChangeSheet(content, check, Markets[0])">
+                                                    <span class="toggle"></span>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <td class="text-center" ng-click="show_form(content, Markets[0])" style="cursor:pointer">{{content.name}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
 
                     </div>
                 </div>
@@ -106,6 +140,68 @@
 
                                 <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="createForm(data)">
                                     <i class="material-icons">send</i> Tạo Form</button>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- modal cập nhật form -->
+<div class="modal fade" id="upform" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">Cập
+                    Nhật
+                    Form
+                </h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding-top: 5px">
+                <div class="row">
+                    <div class="card m-10">
+                        <div class="card-body card-add">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend add">
+                                                    <label for="formname">Tên Form</label>
+                                                </div>
+                                                <input type="text" class="form-control" ng-model="_sheet.name" disabled>
+                                            </div>
+
+                                            <div class="input-group">
+                                                <div class="input-group-prepend add">
+                                                    <label for="spreadsheet">Spreadsheet</label>
+                                                </div>
+                                                <input type="text" class="form-control" ng-model="_sheet.id">
+                                            </div>
+
+                                            <div class="input-group add">
+                                                <label for="urlads">Url ads</label>
+                                                <input type="text" class="form-control" ng-model="_sheet.urlads">
+                                            </div>
+
+                                            <div class="input-group add">
+                                                <label for="fnote">Ghi chú</label>
+                                                <textarea class="form-control" rows="5" ng-model="_sheet.note"></textarea>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="Updateform(_sheet)">
+                                    <i class="material-icons">send</i> Cập Nhật</button>
 
                             </form>
                         </div>
