--- a/maketing/default.html
+++ b/maketing/default.html
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
 
-                            <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover text-center">
+                            <table cellpadding="0" class="table table-striped cell-border table-hover text-center">
                                 <thead>
                                     <tr>
                                         <th>Stt</th>
