--- a/maketing/default.html
+++ b/maketing/default.html
@@ -11,22 +11,31 @@
                                     <div class="row">
                                         <div class="col-lg-10">
                                             <div class="row">
-                                                <div class="col-lg-4">
+                                                <div ng-class="{'col-lg-4' : auth.Role[0].id !== 0 , 'col-lg-3' : auth.Role[0].id === 0}">
                                                     <div class="input-group add">
                                                         <label for="mkday">Từ Ngày</label>
                                                         <input type="date" class="form-control" id="mkday">
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4">
+                                                <div ng-class="{'col-lg-4' : auth.Role[0].id !== 0 , 'col-lg-3' : auth.Role[0].id === 0}">
                                                     <div class="input-group add">
                                                         <label for="mkday2">Đến Ngày</label>
                                                         <input type="date" class="form-control" id="mkday2">
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4">
+                                                <div ng-class="{'col-lg-4' : auth.Role[0].id !== 0 , 'col-lg-3' : auth.Role[0].id === 0}">
+                                                    <div class="input-group add">
+                                                        <label for="form">Form</label>
+                                                        <select class="form-control" ng-model="form"
+                                                            ng-options="option.name for option in Markets">
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div ng-show="auth.Role[0].id === 0" ng-class="{'col-lg-4' : auth.Role[0].id !== 0 , 'col-lg-3' : auth.Role[0].id === 0}">
                                                     <div class="input-group add">
                                                         <label for="mgroup">Groups</label>
-                                                        <select class="form-control" ng-model="mgroup" ng-disabled="auth.Role[0].id !== 0" ng-options="option.Name for option in AllGroups">
+                                                        <select class="form-control" ng-model="mgroup"
+                                                            ng-options="option.Name for option in AllGroups">
                                                         </select>
                                                     </div>
                                                 </div>
