--- a/maketing/mlist.html
+++ b/maketing/mlist.html
@@ -233,7 +233,7 @@
                                             <tr>
                                                 <td>{{_details.Regtime}} {{_details.Regday}}</td>
                                                 <td>{{_details.Phone}}</td>
-                                                <td>{{_details.Manager[0].mname}}</td>
+                                                <td>{{_details.Manager[0].mid}}</td>
                                             </tr>
                                         </tbody>
                                     </table>
