update 2 page rating and centers for mk

--- a/maketing/mlist.html
+++ b/maketing/mlist.html
@@ -181,7 +181,7 @@
                                             <div class="input-group-prepend add">
                                                 <label for="fullname">Địa Chỉ</label>
                                             </div>
-                                            <input type="text" class="form-control" ng-model="_details.Address"
+                                            <input type="text" class="form-control" ng-model="_details.Address[0].name"
                                                 disabled>
                                         </div>
                                     </div>
