--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="center/controller/Statistics.js"></script>
     <script src="center/controller/setup.js"></script>
     <script src="center/controller/manager.js"></script>
+	<script src="center/controller/ScenterRating.js"></script>
 
     <script src="center/makert/makerting.js"></script>
     <script src="center/makert/mlist.js"></script>
