--- a/maketing/mlist.html
+++ b/maketing/mlist.html
@@ -44,7 +44,7 @@
                                         <div class="col-lg-2">
                                             <div class="row">
                                                 <div class="col-lg-11">
-                                                    <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
+                                                    <a href="#" class="btn sas-bk btn-block" style="margin-left: 20px"
                                                         ng-click="Search_mk()">
                                                         <i class="material-icons">search</i> Xem
                                                     </a>
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
 
-                            <button class="btn btn-primary" type="button" data-toggle="collapse" ng-if="_details.Duplicate !== null"
+                            <button class="btn sas-bk" type="button" data-toggle="collapse" ng-if="_details.Duplicate !== null"
                                 data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                                 Xem Trùng
                             </button>
