--- a/maketing/msetup.html
+++ b/maketing/msetup.html
@@ -11,7 +11,7 @@
                                     <div class="col-lg-12">
                                         <div class="row">
                                             <div class="col-lg-12">
-                                                <button class="btn btn-info" data-toggle="modal" style="float: right"
+                                                <button class="btn sas-bk" data-toggle="modal" style="float: right"
                                                     data-target="#addform">
                                                     <i class="material-icons">border_color</i> Thêm Form Mới
                                                 </button>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
 
-                                <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="createForm(data)">
+                                <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="createForm(data)">
                                     <i class="material-icons">send</i> Tạo Form</button>
 
                             </form>
@@ -204,7 +204,7 @@
                                     </div>
                                 </div>
 
-                                <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="Updateform(_sheet)">
+                                <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="Updateform(_sheet)">
                                     <i class="material-icons">send</i> Cập Nhật</button>
 
                             </form>
