--- a/maketing/rating.html
+++ b/maketing/rating.html
@@ -28,7 +28,7 @@
                                         <div class="col-lg-2">
                                             <div class="row">
                                                 <div class="col-lg-11">
-                                                    <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
+                                                    <a href="#" class="btn sas-bk btn-block" style="margin-left: 20px"
                                                         ng-click="Search_mk()">
                                                         <i class="material-icons">search</i> Xem
                                                     </a>
