--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+	
 
     <!-- Material Dashboard CSS -->
     <link rel="stylesheet" href="assets/css/material-dashboard.css">
@@ -38,7 +39,10 @@
     <script src="javascripts/jquery.playSound.js"></script>
     <script src="assets/js/core/popper.min.js"></script>
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
-
+	
+		<!-- select nhiều giá trị -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
     <!--  Notifications Plugin, full documentation here: http://bootstrap-notify.remabledesigns.com/    -->
     <script src="assets/js/plugins/bootstrap-notify.js"></script>
