--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
 	
 		<!-- select nhiều giá trị -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+	<link href="assets/css/select2.min.css" rel="stylesheet" />
+	<script src="javascripts/select2.min.js"></script>
 
     <!--  Notifications Plugin, full documentation here: http://bootstrap-notify.remabledesigns.com/    -->
     <script src="assets/js/plugins/bootstrap-notify.js"></script>
