fix show data in datatable

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
     <!-- datatable -->
     <!-- <script src="assets/js/jquery.dataTables.min.js"></script> -->
     <!-- <script src="assets/js/bootstrap-table.js"></script> -->
-    <script src="javascripts/angular-datatables.min.js"></script>
+    <!-- <script src="javascripts/angular-datatables.min.js"></script> -->
+	<script src="https://rawgithub.com/l-lin/angular-datatables/v0.6.1/dist/angular-datatables.js"></script>
     <script src="javascripts/jquery.dataTables.min.js"></script>
     <script src="javascripts/dataTables.colResize.js"></script>
+	<!-- <script src="//cdn.datatables.net/plug-ins/1.10.19/api/fnReloadAjax.js"></script> -->
 
     <script src="node_modules/angular-md5/angular-md5.min.js"></script>
     <script src="javascripts/angular-route-1-2-18.min.js"></script>
