--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     <script src="javascripts/jquery.playSound.js"></script>
     <script src="assets/js/core/popper.min.js"></script>
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
-	
+
+    <!-- datepicker -->
+    <link rel="stylesheet" href="assets/css/jquery-ui.css">
+    <script src="assets/css/jquery-ui.js"></script>
+    
 		<!-- select nhiều giá trị -->
 	<link href="assets/css/select2.min.css" rel="stylesheet" />
 	<script src="javascripts/select2.min.js"></script>
@@ -71,7 +75,7 @@
     <!-- <script src="assets/js/jquery.dataTables.min.js"></script> -->
     <!-- <script src="assets/js/bootstrap-table.js"></script> -->
     <!-- <script src="javascripts/angular-datatables.min.js"></script> -->
-	<script src="https://rawgithub.com/l-lin/angular-datatables/v0.6.1/dist/angular-datatables.js"></script>
+	<script src="javascripts/angular-datatables.js"></script>
     <script src="javascripts/jquery.dataTables.min.js"></script>
     <script src="javascripts/dataTables.colResize.js"></script>
 	<!-- <script src="//cdn.datatables.net/plug-ins/1.10.19/api/fnReloadAjax.js"></script> -->
