--- a/maketing/center.html
+++ b/maketing/center.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-3" style="padding-left: 5px">
                                                     <div class="input-group add">
                                                         <label for="mkday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="mkcday">
+                                                        <input type="text" class="form-control" id="mkcday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3" style="padding-left: 5px">
                                                     <div class="input-group add">
                                                         <label for="mkday2">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="mkcday2">
+                                                        <input type="text" class="form-control" id="mkcday2">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
@@ -88,3 +88,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#mkcday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#mkcday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
