--- a/maketing/rating.html
+++ b/maketing/rating.html
@@ -47,7 +47,7 @@
                                 </div>
                             </div>
 
-                            <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover text-center">
+                            <table ng-if="isLoading" datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover text-center">
                                 <thead>
                                     <tr>
                                         <th>Stt</th>
