--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" /> -->
     <script src="javascripts/socket.io.js"></script>
 
-    <!-- <base href="/dev/SAS/sas-client/"> -->
+    <!-- <base href="/dev/SAS/CRM/sas-client/"> -->
     <base href="/">
 
 </head>
