--- a/maketing/mlist.html
+++ b/maketing/mlist.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-3">
                                                     <div class="input-group add">
                                                         <label for="mkday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="mkday">
+                                                        <input type="text" class="form-control" id="mkday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <div class="input-group add">
                                                         <label for="mkday2">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="mkday2">
+                                                        <input type="text" class="form-control" id="mkday2">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
@@ -251,3 +251,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#mkday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#mkday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
